# Development-Translation-Bridge

./: .gitignore  CHANGELOG.md  CODEX_REVIEW.md  CONTRIBUTING.md  DOCKER_SETUP.md  Makefile  Q2_2025_PROGRESS.md  QUICK_START.md  README.md  RELEASE_NOTES_V3.0.0.md  RELEASE_NOTES_V4.10.0.md  RELEASE_NOTES_V4.11.0.md  RELEASE_NOTES_V4.12.0.md  RELEASE_NOTES_V4.13.0.md  RELEASE_NOTES_V4.14.0.md  RELEASE_NOTES_V4.15.0.md  RELEASE_NOTES_V4.2.0.md  RELEASE_NOTES_V4.3.4.md  RELEASE_NOTES_V4.4.0.md  RELEASE_NOTES_V4.5.0.md  RELEASE_NOTES_V4.6.0.md  RELEASE_NOTES_V4.7.0.md  RELEASE_NOTES_V4.8.0.md  RELEASE_NOTES_V4.9.0.md  RELEASE_NOTES_V5.0.0.md  RELEASE_NOTES_V5.1.0.md  composer.json  create-repo.sh  devtb  devtb-php  docker-compose.yml  functions.php  github-push.sh  package.json  phpunit.xml  pyproject.toml  setup.sh  style.css
.claude/commands/: tb-analyze.md  tb-transform.md  tb-verify.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
admin/: README.md  package-lock.json  package.json  tsconfig.app.json
core/: functions.php
docs/: CLAUDE_QUICKSTART.md  CONVERSION_EXAMPLES.md  FRAMEWORK_MAPPINGS.md  LOOP_GUIDE.md  PLAN-5.1.md  PLUGIN_CONVERSION.md  RFC-5.0-engine-consolidation.md  TRANSLATION_BRIDGE.md  api-v2.md  claude-integration.md  getting-started.md
includes/: class-devtb-api-v2.php  class-devtb-auth.php  class-devtb-autoloader.php  class-devtb-claude-api.php  class-devtb-cli.php  class-devtb-config.php  class-devtb-corrections.php  class-devtb-element-registry.php  class-devtb-encryption.php  class-devtb-file-handler.php  class-devtb-job-queue.php  class-devtb-logger.php  class-devtb-persistence.php  class-devtb-rate-limiter.php  class-devtb-visual-interface.php  class-devtb-webhook.php  class-devtb-wpbakery-advanced.php  class-devtb-wpbakery-templates.php  class-wpbc-api-v2.php  class-wpbc-corrections.php  class-wpbc-persistence.php  wp-function-stubs.php
schema/: universal-element.schema.json
scripts/: build-release-package.sh
src/translation_bridge/: __init__.py  cli.py  interchange.py  responsive.py
tests/: bootstrap.php  smoke_bricks_e2e.py  smoke_divi_e2e.py  smoke_gutenberg_e2e.py  smoke_lib.py
tests/Integration/: TranslationBridgeIntegrationTest.php
tests/Unit/: APIv2Test.php  AuthTest.php  CLITest.php  FileHandlerTest.php  FrameworkConversionsTest.php  GutenbergWidgetCoverageTest.php  OxygenClassicHardeningTest.php  ProxySchemaVerificationTest.php  ResponsiveRoundTripTest.php  TranslatePathTest.php  UniversalInterchangeTest.php
tests/fixtures/: README.md
tests/python/: __init__.py  test_transform.py  (+8 more)
(+102 files in other folders)
